tests/tutorial/assets/vue/pages/errors/404/component.vue
<template>
    <div>
        <h1 style="text-align: center;">Hello World</h1>
    </div>
</template>

<script>
export default {
    name: 'Root',
    data() {
        return {

        }
    }
}
</script>
